getting_started/test_files_BAD/syntax_errors/MissingMethodBraces.java
public class MissingMethodBraces {
    public static void main(String[] args) 
        int number; // @error - syntax (Missing opening and closing brace for the main method)
        System.out.println(number);
}